<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VoteFragment"
    android:background="#ebebeb">


   <FrameLayout
       android:id="@+id/vote_text_container"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <TextView
           android:id="@+id/voteTextview"
           android:padding="40px"
           android:layout_width="match_parent"
           android:layout_height="900px"
           android:textSize="50px"
           android:textColor="#000"
           android:scrollbars="vertical"
           android:gravity="center"
           android:outlineAmbientShadowColor="#000"
           android:shadowDx="5"
           android:shadowDy="5"
           android:shadowRadius="5"
           android:background="#f3f3f3" />

       <ProgressBar
           android:id="@+id/vote_progress_bar"
           style="?android:attr/progressBarStyle"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"/>

   </FrameLayout>


    <vn.edu.usth.usthspeechrecord.MediaButton
        android:id="@+id/btn_circle_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vote_text_container"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="95dp"
        android:background="@drawable/shapedrawable"
        android:padding="9dp"
        android:src="@drawable/ic_play_arrow_black_24dp"
        android:textColor="#fff" />

    <ImageButton
        android:id="@+id/btn_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_circle_play"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        android:layout_toStartOf="@id/btn_circle_play"
        android:background="@drawable/shapevotebtn"
        android:src="@drawable/ic_thumb_up_black_24dp" />

    <ImageButton
        android:id="@+id/btn_dislike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_circle_play"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="15dp"
        android:layout_toEndOf="@+id/btn_circle_play"
        android:background="@drawable/shapevotebtn"
        android:src="@drawable/ic_thumb_down_black_24dp" />

    <Button
        android:id="@+id/btn_get"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_circle_play"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-60dp"
        android:text="Lấy văn bản" />


</RelativeLayout>