<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordFragment"
    android:orientation="vertical"
    android:background="#ebebeb">

    <FrameLayout
        android:id="@+id/record_text_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/get_text"
            android:layout_width="match_parent"
            android:layout_height="800px"
            android:background="#f3f3f3"
            android:gravity="center"
            android:padding="40px"
            android:scrollbars="vertical"
            android:textColor="#000"
            android:textSize="50px" />

        <ProgressBar
            android:id="@+id/record_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>

    <!--<Button-->
        <!--android:text="Choose one category"-->
        <!--android:id="@+id/btn_dialog"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" />-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#C7C7C7"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp">
        <Spinner
            android:id="@+id/btn_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="center"
            android:spinnerMode="dialog">
        </Spinner>
    </RelativeLayout>

    <Button
        android:layout_marginTop="30px"
        android:layout_marginBottom="50px"
        android:id="@+id/btn_get_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lấy văn bản"
        android:layout_gravity="center"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageButton
            android:id="@+id/btn_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/play_retry_bg"
            android:layout_marginRight="25dp"
            android:src="@drawable/ic_retry"/>

        <vn.edu.usth.usthspeechrecord.StateButton
            android:id="@+id/btnStartRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/recordshape"
            android:src="@drawable/ic_mic_black"/>

        <vn.edu.usth.usthspeechrecord.MediaPlayButton
            android:id="@+id/btnPlayRecord"
            android:layout_marginLeft="25dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/play_retry_bg"
            android:src="@drawable/ic_play" />
    </LinearLayout>
</LinearLayout>